<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etEditStudentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_student_name"/>

    <EditText
        android:id="@+id/etEditStudentEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_student_email"/>

    <EditText
        android:id="@+id/etEditStudentUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_student_username"/>

    <Button
        android:id="@+id/btnSaveStudentChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_changes"/>
</LinearLayout>
