<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddStudentActivity">

    <EditText
        android:id="@+id/etStudentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_student_name"/>

    <EditText
        android:id="@+id/etStudentEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_student_email"/>

    <EditText
        android:id="@+id/etStudentUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_student_username"/>

    <Button
        android:id="@+id/btnAddStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_student"/>
</LinearLayout>
