<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.CreateCourseActivity">

    <EditText
        android:id="@+id/etCourseCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_course_code"/>

    <EditText
        android:id="@+id/etCourseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_course_name"/>

    <EditText
        android:id="@+id/etLecturerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_lecturer_name"/>

    <Button
        android:id="@+id/btnCreateCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_course"/>
</LinearLayout>
